project controller, publication (everything), research (model, dtos, partly service)